--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_header.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_header.html.twig
@@ -1,4 +1,5 @@
 {# Set the path for the site logo. #}
+{% set site_logo_url =  base_path ~ directory ~ '/gfx/logo.svg' %}
 
 {# Mobile overlays. #}
 {% if page.mobile_nav %}
